--- a/compare_REACT_JS/index.html
+++ b/compare_REACT_JS/index.html
@@ -13,10 +13,16 @@
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script>
   const root = document.getElementById('root');
-  const h3 = React.createElement( 'h3' ,  { onmouseenter : () => console.log('mouse enter') } , "I'm a span");
-  const btn = React.createElement('button' ,  { onClick : () => console.log('click') } , 'Click Me');
-  const div = React.createElement('div' , null , [h3 , btn]);
-  ReactDOM.render(div , root)
+  const h3 = React.createElement( 'h3' ,  
+  { id : 'title' , onMouseEnter : () => console.log('mouse enter') } ,
+   "I'm a title");
+  const btn = React.createElement('button' ,   
+  { onClick : () => console.log('click') , style : { backgroundColor : 'red', }, },
+   'Click Me');
+
+  const container = React.createElement('div' , null , [h3 , btn]);
+  ReactDOM.render(container , root);
+
 </script>
 </html>
 
