--- a/compare_REACT_JS/index.html
+++ b/compare_REACT_JS/index.html
@@ -11,17 +11,26 @@
 </body>
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-<script>
-  const root = document.getElementById('root');
-  const h3 = React.createElement( 'h3' ,  
-  { id : 'title' , onMouseEnter : () => console.log('mouse enter') } ,
-   "I'm a title");
-  const btn = React.createElement('button' ,   
-  { onClick : () => console.log('click') , style : { backgroundColor : 'red', }, },
-   'Click Me');
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-  const container = React.createElement('div' , null , [h3 , btn]);
-  ReactDOM.render(container , root);
+<script type="text/babel">
+  const root = document.getElementById('root');
+  const Title = () => (
+    <h3 id = "title" onMouseEnter = {() => console.log('Mouse on')}>I'm a title</h3>
+    )
+  
+  const Button = () => (
+    <button onClick = { () => console.log("click") } style = { {backgroundColor : 'red'} }>Click Me</button>
+  )
+
+  const Container = () => (
+    <div>
+      <Title />  
+      <Button />
+    </div>
+  )
+
+  ReactDOM.render(<Container /> , root);
 
 </script>
 </html>
