--- a/compare_REACT_JS/convert.html
+++ b/compare_REACT_JS/convert.html
@@ -14,41 +14,26 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <script type="text/babel">
-  const root = document.getElementById('root');
-
   function App() {
-    let [counter , setCounter] = React.useState(0);
-    const onClick = () => {
-      setCounter((current) => current + 1);
+    const [minutes , setMinutes] = React.useState();
+    const onChange = (event) => {
+      setMinutes(event.target.value);
     }
     return (
       <div>
-      <h3>Total Click : {counter}</h3>
-      <button onClick = {onClick}>Click Me</button>
-    </div>
+        <h1 className ="h1">Super Converter</h1>
+        <label htmlFor ="minutes">Minutes</label>
+        <input value ={minutes} id = "minutes" placeholder ="Minutes" type ="number" onChange = {onChange} />
+        <h4>You want to convert {minutes}</h4>
+        <label htmlFor ="hours">Hours</label>
+        <input id = "hours" placeholder ="Hours" typt ="number" />
+      </div>
     );
   }
-
+  
+  const root = document.getElementById('root');
   ReactDOM.render(<App /> , root);
 </script>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
