--- a/converter/convert.html
+++ b/converter/convert.html
@@ -14,7 +14,9 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <script type="text/babel">
-  function App() {
+
+  // Minutes To Hours
+  function MinutesToHours(){
     const [amount , setAmount] = React.useState(0);
     const [invert , setInvert] = React.useState(false);
     const onChange = (event) => {
@@ -23,11 +25,10 @@
     const reset = () => setAmount(0);
     const onInvert = () => {
       reset();
-      setInvert(!invert);
+      setInvert((current) => !current);
     }
     return (
       <div>
-        <h1 className ="h1">Super Converter</h1>
         <div>
           <label htmlFor ="minutes">Minutes</label>
           <input 
@@ -53,6 +54,68 @@
 
         <button onClick ={reset}>reset</button>
         <button onClick ={onInvert}>{invert ? "Turn back" : "Invert"}</button>
+      </div>
+      )
+    }
+  // Km to Miles
+  function KmToMiles(){
+    const [amount , setAmount] = React.useState(0);
+    const [invert , setInvert] = React.useState(false);
+    const onChange = (event) => {
+      setAmount(event.target.value);
+    }
+    const reset = () => setAmount(0);
+
+    const onInvert = () => {
+      reset();
+      setInvert((current) => !current);
+    }
+    return(
+      <div>
+        <div>
+          <label htmlFor = "km">Km</label>
+          <input 
+            value ={invert ? amount * 1.6 : amount} 
+            type = "number" 
+            id ="km" 
+            placeholder ="Km"
+            onChange = {onChange} 
+            disabled ={invert}></input>
+        </div>
+
+        <div>
+          <label htmlFor = "miles">Miles</label>
+          <input 
+            value = {invert ? amount : amount / 1.6} 
+            type = "number" 
+            id ="miles" 
+            placeholder ="miles" 
+            disabled = {!invert} 
+            onChange = {onChange}></input>
+        </div>
+        <button onClick = {reset}>reset</button>
+        <button onClick={onInvert}>{invert ? "Turn back" : "Invert"}</button>
+      </div>
+    )
+  }
+  // Main
+  function App() {
+    const [index , setIndex] = React.useState("xx");
+    const onSelect = (event) => {
+      setIndex(event.target.value);
+    }
+    return (
+      <div>
+        <h1 className ="h1">Super Converter</h1>
+        <select value = {index} onChange ={onSelect}>
+          <option value ="xx">Please select your units</option>
+          <option value ="0">Minutes & Hours</option>
+          <option value = "1">Km & Miles</option>
+        </select>
+        <hr />
+        {index === "xx" ? "Pleas select your units" : null}
+        {index === "0" ? <MinutesToHours /> : null}
+        {index === "1" ? <KmToMiles /> : null}
       </div>
     );
   }
